# hyped-extensions-cookiecutter

./: README.md  cookiecutter.json
hyped-extensions-{{ cookiecutter.extension_slug }}/: .gitignore  README.md
hyped-extensions-{{ cookiecutter.extension_slug }}/.github/workflows/: publish.yml
hyped-extensions-{{ cookiecutter.extension_slug }}/docs/: build.sh
hyped-extensions-{{ cookiecutter.extension_slug }}/docs/source/: index.rst
hyped-extensions-{{ cookiecutter.extension_slug }}/src/hyped/: __init__.py
hyped-extensions-{{ cookiecutter.extension_slug }}/src/hyped/extensions/{{ cookiecutter.extension_slug }}/nodes/: dummy.py
hyped-extensions-{{ cookiecutter.extension_slug }}/src/hyped/extensions/{{ cookiecutter.extension_slug }}/ops/: __init__.py
hyped.extensions.{{ cookiecutter.extension_slug }}/: pyproject.toml
hyped.extensions.{{ cookiecutter.extension_slug }}/.github/workflows/: docs.yml  tests.yml
hyped.extensions.{{ cookiecutter.extension_slug }}/docs/: build.sh
hyped.extensions.{{ cookiecutter.extension_slug }}/docs/source/: conf.py
hyped.extensions.{{ cookiecutter.extension_slug }}/src/hyped/extensions/{{ cookiecutter.extension_slug }}/: __init__.py
hyped.extensions.{{ cookiecutter.extension_slug }}/src/hyped/extensions/{{ cookiecutter.extension_slug }}/nodes/: __init__.py
hyped.extensions.{{ cookiecutter.extension_slug }}/tests/hyped/extensions/{{ cookiecutter.extension_slug }}/: test_dummy.py
hyped.extensions.{{ cookiecutter.slug }}/: README.md  pyproject.toml
hyped.extensions.{{ cookiecutter.slug }}/src/hyped/extensions/{{ cookiecutter.slug }}/: __init__.py
hyped.extensions.{{ cookiecutter.slug }}/src/hyped/extensions/{{ cookiecutter.slug }}/nodes/: __init__.py  dummy.py
